--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"cron": "^3.1.7",
 		"cross-env": "^7.0.3",
 		"date-fns": "^3.6.0",
+		"express": "^4.21.2",
 		"file-loader": "^6.2.0",
 		"framer-motion": "^11.3.30",
 		"jsdom": "^25.0.0",
@@ -32,11 +33,13 @@
 		"rxjs": "^7.8.1",
 		"svgo-loader": "^4.0.0",
 		"swr": "^2.2.5",
+		"tar": "^7.4.3",
 		"three": "^0.167.1",
 		"ua-parser-js": "^1.0.38",
 		"url-loader": "^4.1.1"
 	},
 	"devDependencies": {
+		"@types/express": "^5.0.0",
 		"@types/jsdom": "^21.1.7",
 		"@types/node": "^22.5.1",
 		"@types/react": "^18.3.4",
