--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"file-loader": "^6.2.0",
 		"framer-motion": "^11.3.30",
 		"jsdom": "^25.0.0",
+		"nanotar": "^0.2.0",
 		"next": "15.0.0-rc.0",
 		"playwright": "^1.49.1",
 		"react": "rc",
@@ -33,7 +34,6 @@
 		"rxjs": "^7.8.1",
 		"svgo-loader": "^4.0.0",
 		"swr": "^2.2.5",
-		"tar": "^7.4.3",
 		"three": "^0.167.1",
 		"ua-parser-js": "^1.0.38",
 		"url-loader": "^4.1.1"
