--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@chakra-ui/next-js": "^2.2.0",
 		"@chakra-ui/react": "^2.8.2",
+		"@emotion/cache": "^11.14.0",
 		"@emotion/react": "^11.13.3",
 		"@emotion/styled": "^11.13.0",
 		"axios": "^1.7.5",
