--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
 		"@emotion/styled": "^11.13.0",
 		"axios": "^1.7.5",
 		"babel-plugin-react-compiler": "latest",
-		"bezier-easing": "^2.1.0",
 		"cron": "^3.1.7",
 		"cross-env": "^7.0.3",
 		"date-fns": "^3.6.0",
 		"express": "^4.21.2",
 		"file-loader": "^6.2.0",
-		"framer-motion": "^11.3.30",
 		"jsdom": "^25.0.0",
 		"nanotar": "^0.2.0",
 		"next": "15.0.0-rc.0",
@@ -33,8 +31,8 @@
 		"react-dom": "rc",
 		"react-icons": "^5.3.0",
 		"rxjs": "^7.8.1",
+		"sonner": "^2.0.1",
 		"svgo-loader": "^4.0.0",
-		"swr": "^2.2.5",
 		"three": "^0.167.1",
 		"ua-parser-js": "^1.0.38",
 		"url-loader": "^4.1.1"
