--- a/package.json
+++ b/package.json
@@ -12,41 +12,41 @@
 	},
 	"dependencies": {
 		"@emotion/cache": "^11.14.0",
-		"@emotion/react": "^11.13.3",
-		"@emotion/styled": "^11.13.0",
-		"axios": "^1.7.5",
-		"babel-plugin-react-compiler": "latest",
-		"cron": "^3.1.7",
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"axios": "^1.8.4",
+		"babel-plugin-react-compiler": "^19.0.0-beta-aeaed83-20250323",
+		"cron": "^4.1.0",
 		"cross-env": "^7.0.3",
-		"date-fns": "^3.6.0",
+		"date-fns": "^4.1.0",
 		"express": "^4.21.2",
 		"file-loader": "^6.2.0",
-		"jsdom": "^25.0.0",
+		"jsdom": "^26.0.0",
 		"nanotar": "^0.2.0",
-		"next": "15.0.0-rc.0",
-		"playwright": "^1.49.1",
-		"react": "rc",
-		"react-dom": "rc",
-		"react-icons": "^5.3.0",
-		"rxjs": "^7.8.1",
+		"next": "^15.2.3",
+		"playwright": "^1.51.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-icons": "^5.5.0",
+		"rxjs": "^7.8.2",
 		"sonner": "^2.0.1",
 		"svgo-loader": "^4.0.0",
-		"three": "^0.167.1",
-		"ua-parser-js": "^1.0.38",
+		"three": "^0.174.0",
+		"ua-parser-js": "^2.0.3",
 		"url-loader": "^4.1.1"
 	},
 	"devDependencies": {
-		"@types/express": "^5.0.0",
+		"@types/express": "^5.0.1",
 		"@types/jsdom": "^21.1.7",
-		"@types/node": "^22.5.1",
-		"@types/react": "^18.3.4",
-		"@types/react-dom": "^18.3.0",
-		"@types/three": "^0.167.2",
+		"@types/node": "^22.13.13",
+		"@types/react": "^19.0.12",
+		"@types/react-dom": "^19.0.4",
+		"@types/three": "^0.174.0",
 		"@types/ua-parser-js": "^0.7.39",
-		"sass": "^1.77.8",
+		"sass": "^1.86.0",
 		"sharp": "^0.33.5",
 		"sharp-ico-v32": "^0.1.6",
-		"tsx": "^4.19.0",
-		"typescript": "5.5.4"
+		"tsx": "^4.19.3",
+		"typescript": "^5.8.2"
 	}
 }
