--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,29 +8,25 @@ services:
         labels:
             - traefik.enable=true
 
-            - >
-                traefik.http.routers.maki-cafe.rule=
-                Host(`maki.cafe`) || Host(`www.maki.cafe`) ||
-                Host(`makidoll.io`) || Host(`www.makidoll.io`) ||
-                Host(`makidrone.io`) || Host(`www.makidrone.io`)
+            - traefik.http.routers.old-maki-cafe.rule=Host(`old.maki.cafe`)
 
-            - traefik.http.routers.maki-cafe.entrypoints=websecure
-            - traefik.http.routers.maki-cafe.service=maki-cafe
-            - traefik.http.routers.maki-cafe.middlewares=www-to-maki-cafe,makidoll-redirect,makidrone-redirect
-            - traefik.http.routers.maki-cafe.tls.certResolver=le
-            - traefik.http.services.maki-cafe.loadbalancer.server.port=3000
+            - traefik.http.routers.old-maki-cafe.entrypoints=websecure
+            - traefik.http.routers.old-maki-cafe.service=old-maki-cafe
+            #- traefik.http.routers.old-maki-cafe.middlewares=www-to-maki-cafe,makidoll-redirect,makidrone-redirect
+            - traefik.http.routers.old-maki-cafe.tls.certResolver=le
+            - traefik.http.services.old-maki-cafe.loadbalancer.server.port=3000
 
-            - traefik.http.middlewares.www-to-maki-cafe.redirectregex.regex=^https?://(?:www\.)?(.+)
-            - traefik.http.middlewares.www-to-maki-cafe.redirectregex.replacement=https://$${1}
-            - traefik.http.middlewares.www-to-maki-cafe.redirectregex.permanent=true
+            #- traefik.http.middlewares.www-to-maki-cafe.redirectregex.regex=^https?://(?:www\.)?(.+)
+            #- traefik.http.middlewares.www-to-maki-cafe.redirectregex.replacement=https://$${1}
+            #- traefik.http.middlewares.www-to-maki-cafe.redirectregex.permanent=true
 
-            - traefik.http.middlewares.makidoll-redirect.redirectregex.regex=^https?://(?:www\.)?makidoll.io(.+)
-            - traefik.http.middlewares.makidoll-redirect.redirectregex.replacement=https://maki.cafe$${1}
-            - traefik.http.middlewares.makidoll-redirect.redirectregex.permanent=false
+            #- traefik.http.middlewares.makidoll-redirect.redirectregex.regex=^https?://(?:www\.)?makidoll.io(.+)
+            #- traefik.http.middlewares.makidoll-redirect.redirectregex.replacement=https://old.maki.cafe$${1}
+            #- traefik.http.middlewares.makidoll-redirect.redirectregex.permanent=false
 
-            - traefik.http.middlewares.makidrone-redirect.redirectregex.regex=^https?://(?:www\.)?makidrone.io(.+)
-            - traefik.http.middlewares.makidrone-redirect.redirectregex.replacement=https://maki.cafe$${1}
-            - traefik.http.middlewares.makidrone-redirect.redirectregex.permanent=false
+            #- traefik.http.middlewares.makidrone-redirect.redirectregex.regex=^https?://(?:www\.)?makidrone.io(.+)
+            #- traefik.http.middlewares.makidrone-redirect.redirectregex.replacement=https://old.maki.cafe$${1}
+            #- traefik.http.middlewares.makidrone-redirect.redirectregex.permanent=false
 
             - traefik.docker.network=traefik
         volumes:
