--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
         restart: always
         # volumes:
         #     - ./cache:/app/cache
+        environment:
+            PLAUSIBLE_DEBUG: 1
         labels:
             - traefik.enable=true
 
