--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         build: .
         restart: always
         volumes:
-            - ./cache:/cache
+            - ./cache:/app/cache
         labels:
             - traefik.enable=true
 
