--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         restart: always
         volumes:
             - ./cache:/app/cache
+            - ./data:/app/data
         labels:
             - traefik.enable=true
 
