--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
         volumes:
             - ./cache:/app/cache
             - ./data:/app/data
+        # environment:
+        #     PLAUSIBLE_DEBUG: 1
         labels:
             - traefik.enable=true
 
